# lpz

./: .clang-format  .clang-tidy  .gitignore  BUILD_STATUS.md  C++17_MODERNIZATION_REPORT.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY_REPORT.md  COMPONENT_DEPENDENCY_ANALYSIS.md  COMPONENT_INTERFACE_DIAGRAM.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_CODE_QUALITY_REPORT.md  COMPREHENSIVE_WARNING_FIX_REPORT.md  CONST_CORRECTNESS_SUMMARY.md  CONTROLLER_ARCHITECTURE_ANALYSIS.md  CPPCHECK_FIX_PROGRESS.md  CPP_DEPENDENCY_GENERATION_BEST_PRACTICES.md  CPP_MODERNIZATION_GUIDE.md  CPP_MODERNIZATION_SUMMARY.md  CRITICAL_PATHS_AND_BOTTLENECKS.md  DEEP_UNDERSTANDING_ANALYSIS.md  FINAL_BUILD_STATUS.md  FINAL_CODE_QUALITY_REPORT.md  FINAL_MODERNIZATION_STATUS.md  FINAL_MODERNIZATION_SUMMARY.md  FINAL_REFACTORING_STATUS.md  FINAL_WARNING_FIX_STATUS.md  GUI_TOOLS_ANALYSIS.md  GUI_TOOLS_COMPREHENSIVE_ANALYSIS.md  INSTALL  INSTALL.md  MACOS_STATIC_BUILD_FIX.md  MIGRATION_EXAMPLES.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_LOG.md  MODERNIZATION_PHASE4_PLAN.md  MODERNIZATION_PROGRESS.md  (+94 more)
selforg/: .clang-format  CMakeLists.txt  MODERNIZATION_SUMMARY.md  Makefile  abstractrobot.h  agent.cpp  agent.h  build-shared.sh  configure  cppcheck_full_selforg.txt  files_needing_override.txt  final_fix_all_issues.py  fix_abstractiafcontroller.py  fix_abstractiafcontroller_remaining.py  fix_abstractmulticontroller.py  fix_all_controller_overrides.py  fix_all_override_issues.py  fix_all_override_spaces.py  fix_all_overrides_comprehensive.py  fix_all_remaining_overrides.py  fix_classicreinforce.py  fix_classicreinforce_all.py  fix_configurable_override.py  fix_controller_overrides.py  fix_controllernet.py  fix_controllernet_cpp.py  fix_controllernet_cpp_all.py  fix_crossmotorcoupling.py  fix_dep.py  fix_dep_all.py  fix_derbigcontroller.py  fix_derinf.py  fix_derlininvert.py  fix_derlininvert_all.py  fix_elman_cpp.py  fix_elman_for_loops.py  fix_esn_h.py  fix_explicit_and_override.py  fix_explicit_keywords.py  fix_final_compilation_errors.py  (+31 more)
selforg/controller/: abstractcontroller.cpp  abstractcontroller.cpp.bak.cpp17  abstractcontroller.cpp.bak.modern  abstractcontroller.h  abstractcontroller.h.bak.cpp17  abstractcontrolleradapter.h  abstractcontrolleradapter.h.bak.override2  abstractiafcontroller.cpp  abstractiafcontroller.cpp.bak.casts  abstractiafcontroller.cpp.bak.cpp17  abstractiafcontroller.h  abstractiafcontroller.h.bak.cast  abstractiafcontroller.h.bak.cast2  abstractiafcontroller.h.bak.override3  abstractmodel.h  abstractmodel.h.bak.modern  abstractmulticontroller.cpp  abstractmulticontroller.cpp.bak.modern2  abstractmulticontroller.h  abstractmulticontroller.h.bak.override3  braitenberg.h  classicreinforce.cpp  classicreinforce.cpp.bak.modern  classicreinforce.cpp.bak.modern2  classicreinforce.h  controllerbase.h  controllerfactory.cpp  controllerfactory.h  controllernet.cpp  controllernet.cpp.bak.modern2  controllernet.h  crossmotorcoupling.cpp  crossmotorcoupling.h  crossmotorcoupling.h.bak.cast  dep.cpp  dep.h  derbigcontroller.cpp  derbigcontroller.cpp.bak.cpp17  derbigcontroller.cpp.bak.modern2  derbigcontroller.h  (+158 more)
selforg/controller/old_stuff/: .!58216!dersimple.cpp  .!83008!dersimple.cpp  dersimple.cpp  dersimple.h
selforg/examples/: controllertest.cpp  feedforwardtest.cpp  rl_test.cpp
selforg/examples/directconnect/: directconnect.cpp
selforg/examples/integration/: cmdline.cpp  cmdline.h  main.cpp
selforg/examples/matrix/: matrixexample.cpp
selforg/matrix/: Makefile.test  matrix.cpp  matrix.cpp.bak.cast2  matrix.cpp.bak.casts  matrix.cpp.bak.const  matrix.cpp.bak.cpp17  matrix.h  matrix.tests.hpp  matrix_neon.cpp  matrix_neon.cpp.disabled  matrix_neon.h  matrix_simd.h  matrixutils.cpp  matrixutils.h  sparsearray.h  sparsematrix.h  sparsematrix.tests.hpp  sse_test.cc  test_matrix  test_matrix.cpp.disabled  test_matrix_asan  unit_test.hpp
selforg/simulations/dblcontingency/: console.cpp  main.cpp
selforg/simulations/dblcontingency_direct/: console.cpp  console.cpp.bak.cast2  main.cpp
selforg/simulations/manipuexperts/: cmdline.cpp  console.cpp  main.cpp  multiexpertpair.cpp  multiexpertpair.cpp.bak  multiexpertpair.h  multiexpertsubopt.cpp  multiexpertsubopt.cpp.bak  multiexpertsubopt.h
selforg/simulations/pendulum/: cmdline.cpp  console.cpp  console.cpp.bak.postfix  globaldata.h  main.cpp  main_starttop.cpp
selforg/simulations/simplesystems/: cmdline.h  console.cpp  main.cpp
selforg/simulations/tcpcommunication/: Socket.cpp  Socket.h  YarsException.h  clienttest.cpp  console.cpp  globaldata.h  main.cpp  tcpcontroller.cpp  tcpcontroller.h
selforg/statistictools/: analysationmodes.h  measuremodes.h  statistictools.cpp  statistictools.h
selforg/statistictools/dataanalysation/: templatevalueanalysation.cpp  templatevalueanalysation.h
selforg/tests/: configurabletest.cpp  unit_test.hpp
selforg/utils/: avrtypes.h  backcaller.cpp  backcaller.h  backcallervector.h  callbackable.h  circular_buffer.h  configurable.cpp  configurable.h  configurablelist.cpp  configurablelist.h  controller_misc.cpp  controller_misc.h  datafunc.h  discretisizer.cpp  discretisizer.h  globaldatabase.cpp  globaldatabase.h  inspectable.cpp  inspectable.h  inspectableproxy.cpp  inspectableproxy.h  lyapunov.cpp  lyapunov.h  mac_drand48r.h  mediator.cpp  mediator.h  mediatorcollegue.cpp  mediatorcollegue.h  modern_randomgenerator.h  modern_storeable.h  noisegenerator.h  parametrizable.cpp  parametrizable.h  plotoption.cpp  plotoption.h  plotoptionengine.cpp  plotoptionengine.h  position.h  quickmp.h  randomgenerator.cpp  (+13 more)
selforg/wirings/: abstractwiring.cpp  abstractwiring.h  copywiring.cpp  copywiring.h  derivativewiring.cpp  derivativewiring.h  feedbackwiring.cpp  feedbackwiring.h  forceboostwiring.cpp  forceboostwiring.h  motornoisewiring.h  one2onewiring.cpp  one2onewiring.h  selectivenoisewiring.h  selectiveone2onewiring.cpp  selectiveone2onewiring.h  selectiveone2onewiring.h.bak.override  wiringsequence.cpp  wiringsequence.h
(+1499 files in other folders)
